# eeg-to-fmri

./: README.md  clean.sh  pyproject.toml
examples/: classification_contrastive.ipynb  synthesis.ipynb
na_models/: na_specification_1  na_specification_10  na_specification_11  na_specification_12  na_specification_13  na_specification_14  na_specification_15  na_specification_2  na_specification_3  na_specification_4  na_specification_5  na_specification_6  na_specification_7  na_specification_8  na_specification_9
src/eeg-to-fmri/: __init__.py
src/eeg-to-fmri/layers/: fourier_features.py  latent_attention.py
src/eeg-to-fmri/models/: classifiers.py  eeg_to_fmri.py  fmri_ae.py
src/eeg-to-fmri/regularizers/: activity_regularizers.py
src/eeg-to-fmri/utils/: bnn_utils.py  conv_sat_utils.py  conv_utils.py  fmri_utils.py  gen_dims_utils.py  losses_utils.py  lrp.py  memory_utils.py  metrics.py  print_utils.py  process_utils.py  search_algorithms.py  tf_config.py  tfp_seed.py  viz_utils.py
src/eeg_to_fmri/: __init__.py
src/eeg_to_fmri/data/: __init__.py  data_utils.py  eeg_utils.py  preprocess_data.py
src/eeg_to_fmri/explainability/: __init__.py  lrp.py
src/eeg_to_fmri/layers/: __init__.py  bayesian.py  fft.py  fourier_features.py  locally_connected.py  mask.py  resnet_block.py  style.py  topographical_attention.py
src/eeg_to_fmri/learning/: __init__.py  losses.py  train.py
src/eeg_to_fmri/metrics/: __init__.py  quantitative_metrics.py
src/eeg_to_fmri/models/: __init__.py  classifiers.py  fmri_ae.py  synthesizers.py
src/eeg_to_fmri/regularizers/: __init__.py  activity_regularizers.py  path_sgd.py
src/eeg_to_fmri/utils/: __init__.py  train.py  (+7 more)
