[project]
name = "eeg-to-fmri"
version = "0.0.1"
readme = "README.md"
authors = [{ name = "David Calhas", email = "eeg_to_fmri@outlook.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["eeg", "fmri", "synthesis", "deep learning", "learning", "machine learning", "computer vision"]
requires-python = ">=3.8"
dependencies = [
	"tensorflow==2.9.0",
	"z3-solver==4.8.9.0",
	"GPyOpt==1.2.6",
	"matplotlib==3.5.3",
	"mne==0.23.4",
	"nilearn==0.7.0",
	"cython==0.29.21",
	"tensorflow_probability==0.12.2",
	"jax==0.2.12",
	"jaxlib==0.1.64"
]


[project.urls]
home = "https://dcalhas.github.io/eeg_to_fmri/"
repository = "https://github.com/eeg-to-fmri/eeg-to-fmri"
